--- a/src/main/resources/data/stylesheets/components/sidebar.css
+++ b/src/main/resources/data/stylesheets/components/sidebar.css
@@ -68,7 +68,7 @@
 
  .accordion .header
  {
-     -fx-padding: 0 0 0.5em 0;
+     -fx-padding: 0 0 0.25em 0;
      -fx-cursor: hand;
  }
 
